# hash-utils

./: README.md  exp.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
Docs/: DESIGN.md
examples/: basic_usage.py  exp.py
hash_generator/: unique_hash_generator.py
hash_utils/: __init__.py  basic_testing.py  hash_maker.py  unique_hash_generator.py
tests/: test_hash.py
