[tool.poetry]
name = "hash-utils"
version = "0.1.0"
description = "A utility package for generating unique hashes with Redis integration"
authors = ["abhishekprakash256 <abhishekprakash47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
